--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <div>
-        <h1>Student Name</h1>
+        <div id="top-bar">
+            <h1>Student Name</h1>
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -28,8 +28,9 @@
         </div>
     </header>
     <main>
-        <div id = "portfolio">
-            <h2 class="section-heading">Portfolio</h2>
+        <div id="portfolio">
+        <h2 class="section-heading">Portfolio</h2>
+            <div id = "portfolio-articles">
             <article>
                 <img src = "images/portfolio-1.png">
                 <h2>Marketing Page</h2>
@@ -61,12 +62,17 @@
                 <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
             </article>
         </div>
+    </div>
 
         <div id ="contact">
             <h2 class="section-heading">Contact</h2>
-            <p>If you're interessted in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
-            <p>Phone: <b>+31 134567890</b> </p>
-            <p>Email: <b>test@test.nl</b></p>
+            <div>
+                <p>If you're interessted in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
+            </div>
+            <div>
+                <p>Phone: <b>+31 134567890</b> </p>
+                <p>Email: <b>test@test.nl</b></p>
+            </div>
         </div>
 
     </main>
