--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#skills">Skills</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
         <div id = "introduction">
-            <img src="images/responsive-layout-profile.png">
+            <img src="images/responsive-layout-profile.png" alt="Profile picture of me">
             <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished learning front-end web development at Treehouse and
                 am excited to put all my skills to use!
             </p>
@@ -31,38 +32,52 @@
         <div id="portfolio">
         <h2 class="section-heading">Portfolio</h2>
             <div id = "portfolio-articles">
-            <article>
-                <img src = "images/portfolio-1.png">
-                <h2>Marketing Page</h2>
-                <p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
-            </article>
-            <article>
-                <img src = "images/portfolio-2.png">
-                <h2>Search Page</h2>
-                <p>This project searches through a specific database to find information that the user is trying to look up.</p>
-            </article>
-            <article>
-                <img src = "images/portfolio-3.png">
-                <h2>Travel app</h2>
-                <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
-            </article>
-            <article>
-                <img src = "images/portfolio-4.png">
-                <h2>Map of Favorite Spots</h2>
-                <p>This project uses mapping apis to plot points from my favorite spots in the city for a do-it-yourself walking tour.</p>
-            </article>
-            <article>
-                <img src = "images/portfolio-5.png">
-                <h2>Photo Gallery</h2>
-                <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photo's.</p>
-            </article>
-            <article>
-                <img src = "images/portfolio-6.png">
-                <h2>Calculator</h2>
-                <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
-            </article>
-        </div>
-    </div>
+                <article>
+                    <img src = "images/portfolio-1.png" alt="A picture of the Marketing page">
+                    <h2>Marketing Page</h2>
+                    <p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
+                </article>
+                <article>
+                    <img src = "images/portfolio-2.png" alt="A picture of the search page I made">
+                    <h2>Search Page</h2>
+                    <p>This project searches through a specific database to find information that the user is trying to look up.</p>
+                </article>
+                <article>
+                    <img src = "images/portfolio-3.png" alt="A picture of the travel app">
+                    <h2>Travel app</h2>
+                    <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
+                </article>
+                <article>
+                    <img src = "images/portfolio-4.png" alt="A picture of a Map showing my favorite spots">
+                    <h2>Map of Favorite Spots</h2>
+                    <p>This project uses mapping apis to plot points from my favorite spots in the city for a do-it-yourself walking tour.</p>
+                </article>
+                <article>
+                    <img src = "images/portfolio-5.png" alt="A picture of the Photo Gallery I made">
+                    <h2>Photo Gallery</h2>
+                    <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photo's.</p>
+                </article>
+                <article>
+                    <img src = "images/portfolio-6.png" alt="A picture of a Calculator">
+                    <h2>Calculator</h2>
+                    <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+                </article>
+            </div>
+         </div>
+
+         <div id="skills">
+             <h2 class="section-heading">Skills</h2>
+                <div>
+                    <p>Next to the examples of websites I made during my Tech Degree course, I have skills in:</p>
+                    <ul>
+                        <li>Needlefelting</li>
+                        <li>Drawing</li>
+                        <li>Teamwork</li>
+                        <li>Analyzing</li>
+                        <li>Front end and back end functional testing</li>
+                    </ul>
+                </div>
+         </div>
 
         <div id ="contact">
             <h2 class="section-heading">Contact</h2>
@@ -77,8 +92,16 @@
 
     </main>
     <footer>
-        <p>Maartje Schreijenberg</p>
-        <a href="#">Back to top</a>
+        <p>Student name</p>
+        <a id="back-to-top" href="#">Back to top</a>
+        <nav id="footer-nav">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
 
     </footer>
 </body>
